<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddStoryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="ifContentScrolls">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_baseline_image_24"
                android:contentDescription="@string/no_image_selected"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/black"
                android:text="@string/camera"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_photo"
                app:layout_constraintEnd_toStartOf="@id/button_gallery" />

            <Button
                android:id="@+id/button_gallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/black"
                android:text="@string/gallery"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/button_camera"
                app:layout_constraintTop_toBottomOf="@id/iv_photo"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:boxStrokeColor="@color/textColorHint"
                app:boxBackgroundColor="@android:color/white"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/button_camera">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_add_description"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:hint="@string/add_a_description"
                    android:textColorHint="@color/white"
                    android:textColor="@color/black"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:padding="16dp"
                    android:maxLines="10"
                    android:scrollbars="vertical" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_add_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@+id/ti_description"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_switch"
                app:layout_constraintStart_toEndOf="@id/switch_add_location"
                app:layout_constraintTop_toTopOf="@id/switch_add_location"
                app:layout_constraintBottom_toBottomOf="@id/switch_add_location"/>

            <Button
                android:id="@+id/button_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/black"
                android:text="@string/add_story"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/switch_add_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/button_add"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="?android:attr/progressBarStyleLarge" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
